styles.css
    @import url('https://fonts.googleapis.com/css2?family=Montserrat&display=swap');

    :root.dark {
        --main-bg: #572649;
        --accent: #e57d90;
        --readable-bg: #a3386c;
        --readable-font: whitesmoke;
        --main-font: 'Montserrat', sans-serif;
        --accent-font-color: rgb(238, 88, 163);
    }

    :root.light {
        --main-bg: #ffcdd4;
        --accent: #e57d90;
        --readable-bg: whitesmoke;
        --readable-font: whitesmoke;
        --main-font: 'Montserrat', sans-serif;
        --accent-font-color: rgb(238, 88, 163);
    }

    * {
        font-family: var(--main-font);
        font-size: 24px;
        background-color: var(--main-bg);
        margin: 0;
        padding: 0;
        box-sizing: border-box;
    }

    .main-container {
        display: flex;
        flex-direction: column;
    }


    .header {
        top: 0;
        position: sticky;
        background-color: var(--accent);
        padding: 5px 5px;
    }

    .header-wrapper {
        display: flex;
        justify-content: space-between;
        padding: 5px;
    }

    .header-wrapper>div {
        display: flex;
        justify-content: center;
        align-items: center;
    }

    .header-buttons {
        gap: 20px;
    }

    .header-buttons>a {
        font-size: 0.8rem;
        padding: 2px;
        text-decoration: none;
        color: var(--readable-font)
    }

    .content>div {
        height: 100vh;
        padding: 50px;
    }

    .hero-container {
        text-align: center;
    }

    .hero-main {
        display: flex;
        justify-content: center;
        align-items: center;
        background-image: url(./assets/hero-bg.png);
    }

    .hero-header {
        font-size: 3rem;
        font-weight: 900;
        color: var(--accent-font-color);
    }

    #hero-button {
        margin-top: 1rem;
    }

    button {
        text-decoration: none;
        text-align: center;
        font-family: var(--main-font);
        font-size: 0.6rem;
        height: 1.5rem;
        width: 4rem;
        padding: 8px;
        border-radius: 8px;
        border: none;
        background-color: var(--accent-font-color);
        cursor: pointer;
        color: var(--readable-font);
    }

    button:hover {
        background-color: var(--accent);
    }

    .middle {
        display: flex;
        justify-content: center;
        align-items: center;
    }

    .middle-container {
        display: flex;
        flex-direction: column;
        justify-content: space-between;
        align-items: center;
        gap: 1rem;
        padding: 50px;
    }

    .middle-heading {
        font-size: 3rem;
        color: var(--accent-font-color);
        font-weight: 900;
        margin-bottom: 1rem;
    }

    .explainer {
        display: flex;
        flex-direction: row;
        text-align: center;
        gap: 20px;
    }

    .explainer>div {
        display: flex;
        flex-direction: column;
        gap: 20px;
        padding: 20px;
        background-color: var(--readable-bg);
        border-radius: 40px;
        box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.112);
        transition: transform 0.3s ease;

    }

    .explainer>div:hover {
        transform: scale(1.1);
    }

    .explainer>div>img {
        height: 8rem;
        width: 12rem;
        border-radius: 40px;
        object-fit: cover;
    }

    .explainer-title {
        font-weight: 900;
    }

    .explainer-description {
        font-size: 0.5rem;
    }

    .cta {
        background-image: url(./assets/cta-bg.png);
        display: flex;
        flex-direction: column;
        justify-content: center;
    }

    .cta-container {
        text-align: center;
    }

    .cta-header {
        font-size: 3rem;
        font-weight: 900;
        color: var(--accent-font-color);
    }

    .cta-buttons {
        margin-top: 1rem;
    }

    .footer {
        background-color: var(--accent);
        padding: 5px;
    }

    .footer-text {
        font-size: 0.5rem;
        color: whitesmoke;
        text-align: center;
    }

